cdc-data-pipeline/restheart/restheart-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: restheart-service
  labels:
    name: restheart
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: "ip"
    service.beta.kubernetes.io/aws-load-balancer-type: external
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
spec:
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: restheart
